// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem > renders as active song 1`] = `
<div
  class="flex items-start justify-between py-4 px-4 cursor-pointer rounded-2xl transition-all duration-300 transform hover:scale-105 bg-gradient-to-r from-custom-red-100 to-custom-yellow-100 dark:from-custom-red-900 dark:to-custom-yellow-900 border-l-4 border-custom-red-500 shadow-lg"
>
  <div
    class="flex-1"
  >
    <h3
      class="text-lg font-bold leading-tight transition-colors duration-200 text-custom-red-700 dark:text-custom-red-300"
    >
      Test Song
    </h3>
    <p
      class="text-base mt-1 transition-colors duration-200 text-custom-yellow-700 dark:text-custom-yellow-300"
    >
      Test Artist
    </p>
  </div>
  <span
    class="text-base ml-4 flex-shrink-0 font-semibold transition-colors duration-200 text-custom-red-600 dark:text-custom-red-400"
  >
    3:00
  </span>
</div>
`;

exports[`PlayListItem > renders with default props 1`] = `
<div
  class="flex items-start justify-between py-4 px-4 cursor-pointer rounded-2xl transition-all duration-300 transform hover:scale-105 hover:bg-custom-teal-50 dark:hover:bg-custom-teal-900/30 hover:shadow-md"
>
  <div
    class="flex-1"
  >
    <h3
      class="text-lg font-bold leading-tight transition-colors duration-200 text-custom-teal-800 dark:text-custom-teal-100 hover:text-custom-teal-600 dark:hover:text-custom-teal-300"
    >
      Test Song
    </h3>
    <p
      class="text-base mt-1 transition-colors duration-200 text-custom-blue-600 dark:text-custom-blue-300"
    >
      Test Artist
    </p>
  </div>
  <span
    class="text-base ml-4 flex-shrink-0 font-semibold transition-colors duration-200 text-custom-teal-600 dark:text-custom-teal-400"
  >
    3:00
  </span>
</div>
`;

exports[`PlayListItem > renders with different song data 1`] = `
<div
  class="flex items-start justify-between py-4 px-4 cursor-pointer rounded-2xl transition-all duration-300 transform hover:scale-105 hover:bg-custom-teal-50 dark:hover:bg-custom-teal-900/30 hover:shadow-md"
>
  <div
    class="flex-1"
  >
    <h3
      class="text-lg font-bold leading-tight transition-colors duration-200 text-custom-teal-800 dark:text-custom-teal-100 hover:text-custom-teal-600 dark:hover:text-custom-teal-300"
    >
      Another Song
    </h3>
    <p
      class="text-base mt-1 transition-colors duration-200 text-custom-blue-600 dark:text-custom-blue-300"
    >
      Different Artist
    </p>
  </div>
  <span
    class="text-base ml-4 flex-shrink-0 font-semibold transition-colors duration-200 text-custom-teal-600 dark:text-custom-teal-400"
  >
    4:30
  </span>
</div>
`;

exports[`PlayListItem > renders with long title and artist 1`] = `
<div
  class="flex items-start justify-between py-4 px-4 cursor-pointer rounded-2xl transition-all duration-300 transform hover:scale-105 hover:bg-custom-teal-50 dark:hover:bg-custom-teal-900/30 hover:shadow-md"
>
  <div
    class="flex-1"
  >
    <h3
      class="text-lg font-bold leading-tight transition-colors duration-200 text-custom-teal-800 dark:text-custom-teal-100 hover:text-custom-teal-600 dark:hover:text-custom-teal-300"
    >
      Very Long Song Title That Might Wrap Around The Container
    </h3>
    <p
      class="text-base mt-1 transition-colors duration-200 text-custom-blue-600 dark:text-custom-blue-300"
    >
      Very Long Artist Name That Might Also Wrap Around
    </p>
  </div>
  <span
    class="text-base ml-4 flex-shrink-0 font-semibold transition-colors duration-200 text-custom-teal-600 dark:text-custom-teal-400"
  >
    5:45
  </span>
</div>
`;

exports[`PlayListItem > renders with numeric length (seconds) 1`] = `
<div
  class="flex items-start justify-between py-4 px-4 cursor-pointer rounded-2xl transition-all duration-300 transform hover:scale-105 hover:bg-custom-teal-50 dark:hover:bg-custom-teal-900/30 hover:shadow-md"
>
  <div
    class="flex-1"
  >
    <h3
      class="text-lg font-bold leading-tight transition-colors duration-200 text-custom-teal-800 dark:text-custom-teal-100 hover:text-custom-teal-600 dark:hover:text-custom-teal-300"
    >
      Test Song
    </h3>
    <p
      class="text-base mt-1 transition-colors duration-200 text-custom-blue-600 dark:text-custom-blue-300"
    >
      Test Artist
    </p>
  </div>
  <span
    class="text-base ml-4 flex-shrink-0 font-semibold transition-colors duration-200 text-custom-teal-600 dark:text-custom-teal-400"
  >
    2:05
  </span>
</div>
`;
